--- a/index.html
+++ b/index.html
@@ -157,39 +157,46 @@
         <a href="#none">
         <img src="image/check2.png" alt=""></a>
         <span>선물2배로 준비했어요</span>
-        <p>8월에도<br>출석체크하기<br></div>
+        <p>8월에도<br>출석체크하기<br>
+      </div>
         </li>
         <li>
       <div class="box">
         <a href="#none">
         <img src="image/kcard.png" alt=""></a>
         <span>쉽게 개설하고 해택받는</span>
-        <p>증권사 주식<br>계좌 이벤트</p></div>
+        <p>증권사 주식<br>계좌 이벤트</p>
+      </div>
         </li>
         <li>
       <div class="box">
         <a href="#none">
         <img src="image/kcard2.png" alt=""></a>
         <span>SIMPLE카드 이용하고</span>
-        <p>최대 18만원 받기<br></p></div>
+        <p>최대 18만원 받기<br></p>
+      </div>
         </li>
         <li>
       <div class="box">
         <a href="#none">
         <img src="image/box.png" alt=""></a>
         <span>케이뱅크 100% 활용팁</span>
-        <p>매일 쏠쏠한 <br>혜택이 가~득</p></div>
+        <p>매일 쏠쏠한 <br>혜택이 가~득</p>
+      </div>
         </li>
         <li>
       <div class="box">
         <a href="#none"><img src="image/bus.png" alt=""></a>
         <span>매일 버스,지하철 탈 때마다</span>
-        <p>최대 450원씩 받고 <br>3천원 또 받아요</p></div>
+        <p>최대 450원씩 받고 <br>3천원 또 받아요</p>
+      </div>
         </li>
         </ul>
       </div>
       </div>
+
 <!-- 고객센터 -->
+
       <div id="info">
       <div class="infoT">
         <p>ContactUs</p>
